--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <h1>World Clock</h1>
     <footer>
       This project was coded by Zahra Rostayar and is
-      <a href="#" target="_blank">open sourced on GitHub.</a>
+      <a href="https://github.com/zahrary/world-clock" target="_blank"
+        >open sourced on GitHub.</a
+      >
     </footer>
     <script src="javascript/index.js"></script>
   </body>
