Added the basic HTML

--- a/index.html
+++ b/index.html
@@ -7,7 +7,26 @@
     <title>World Clock</title>
   </head>
   <body>
-    <h1>World Clock</h1>
+    <div class="container">
+      <h1>World Clock</h1>
+      <select name="" id="">
+        <option value="">Select a city...</option>
+        <option value="">New York</option>
+        <option value="">Sydney</option>
+        <option value="">Kabul</option>
+        <option value="">Berlin</option>
+      </select>
+      <div class="city">
+        <h2>Istanbul 🇹🇷</h2>
+        <div class="date">December 28th 2024</div>
+        <div class="time">8:03:15 PM</div>
+      </div>
+      <div class="city">
+        <h2>New Delhi 🇮🇳</h2>
+        <div class="date">December 28th 2024</div>
+        <div class="time">8:03:15 PM</div>
+      </div>
+    </div>
     <footer>
       This project was coded by Zahra Rostayar and is
       <a href="https://github.com/zahrary/world-clock" target="_blank"
